# vidaudit

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  DESIGN.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml  report.json
eval/: __init__.py  captioner.py  finevideo_loader.py  run_eval.py
examples/: descs.json  report.json  sample_descriptions.json
notebooks/: eval_demo.ipynb  qwen_smoke.ipynb
scripts/: smoke.py
tests/: conftest.py  test_cli.py  test_description_parser.py  test_finevideo_loader.py  test_frame_sampler.py  test_gemini.py  test_object_audit.py  test_qwen_vl.py  test_report.py  test_run_eval.py  test_version.py  test_vlm_base.py
vidaudit/: __init__.py  cli.py  description_parser.py  frame_sampler.py  report.py
vidaudit/auditors/: __init__.py  object_audit.py
vidaudit/vlm/: __init__.py  _cache.py  base.py  gemini.py  qwen_vl.py
