[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vidaudit"
description = "Audit VLM-generated video descriptions for hallucinations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Shane Milek" }]
keywords = ["video", "vlm", "hallucination", "evaluation", "captioning"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "spacy>=3.7",
    "google-genai>=0.3",
    "pillow>=10.2",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
qwen = ["transformers>=4.45", "torch>=2.2"]
eval = ["datasets>=2.20"]

[project.scripts]
vidaudit = "vidaudit.cli:app"

[project.urls]
Repository = "https://github.com/shanemilek/vidaudit"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.version]
path = "vidaudit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["vidaudit"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["vidaudit"]

[tool.ruff.lint.flake8-type-checking]
# Pydantic resolves field annotations at runtime; with `from __future__ import
# annotations` the TCH rules would otherwise move these imports into a
# TYPE_CHECKING block and break model construction.
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.flake8-bugbear]
# Typer requires its option/argument descriptors in argument defaults; that's
# the documented API and the calls are effectively immutable singletons.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["spacy.*", "google.*", "transformers.*", "torch.*", "datasets.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
